# PAST-CubeSat-Telemetry-Validation

./: .gitignore  README.md
receiver/: README.md  config.py  main.py  payload_processing.py  rs_block.py  rs_c_wrapper.py  rs_group.py  rs_manager.py  telemetry_packet.py  telemetry_receiver.py
receiver/.ven/: pyvenv.cfg
transmitter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  stm32l432xc_flash.ld  test_rc
transmitter/Inc/: FreeRTOSConfig.h
transmitter/Src/: history.c  history.h  image.c  image.h  main.c  main.h  rand.c  rand.h  ring_buffer.c  ring_buffer.h  rs.c  rs.h  sensors.c  sensors.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tasks.c  tasks.h  telemetry.c  telemetry.h  testdata.c  testdata.h  tmr.h  uart_comms.c  uart_comms.h
transmitter/Src/data/: barometer.csv  battery_monitor.csv  gnss.csv  imu.csv
